--- a/src/01-module/iris-feature-pipeline.ipynb
+++ b/src/01-module/iris-feature-pipeline.ipynb
@@ -282,9 +282,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "jupynoteKernel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jupynotekernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
